prepared for the deployment

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
+    "inkdrop": "file:..",
     "mongoose": "^8.16.4",
     "nodemon": "^3.1.10"
   },
